tests/machine/x/cpp/go_auto.error
line 10: ../../../tests/machine/x/cpp/go_auto.cpp: In function ‘int main()’:
../../../tests/machine/x/cpp/go_auto.cpp:10:43: error: expected primary-expression before ‘.’ token
   10 |     std::cout << std::boolalpha << testpkg.Add(2, 3);
      |                                           ^
../../../tests/machine/x/cpp/go_auto.cpp:14:43: error: expected primary-expression before ‘.’ token
   14 |     std::cout << std::boolalpha << testpkg.Pi;
      |                                           ^
../../../tests/machine/x/cpp/go_auto.cpp:18:43: error: expected primary-expression before ‘.’ token
   18 |     std::cout << std::boolalpha << testpkg.Answer;
      |                                           ^

  9 |   {
 10 |     std::cout << std::boolalpha << testpkg.Add(2, 3);
 11 |     std::cout << std::endl;
